--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <title> Vatsal Rustagi | printf("%s","I am a Coder"); </title>
+    <title> Vatsal Rustagi | Coder; </title>
     <link rel = "stylesheet" href = "css/normalize.css">
     <link rel = "stylesheet" href = "css/main.css">
     <link rel = "stylesheet" href = "css/responsive.css">
@@ -14,7 +14,7 @@
     <header>
       <a href = "index.html" id = "logo">
         <h1> Vatsal Rustagi </h1>
-        <h2> //CODER </h2>
+        <h2> // CODER </h2>
       </a>
         <nav>
           <ul>
