--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </header>
     <div id = "wrapper">
       <section>
-        <img src = "img/vatsal.jpg" alt = "Photograph of Vatsal Rustagi" class = "profile-photo">
+        <img src = "img/vatsal.JPG" alt = "Photograph of Vatsal Rustagi" class = "profile-photo">
         <h3>About</h3>
         <p>Hey there! I am Vatsal Rustagi. I'm currently a student at University of California, Irvine. I'm a passionate coder and a UI enthusiast.
            Besides my academics I take pictures, check it on my instagram page <a href= "https://www.instagram.com/vatslife/">@vatslife</a>.</p>
